src/pages/en/v1.10.0/installation/network-options.mdx
---
title: "Network options"
metaTitle: "Network options"
metaDescription: "Network options plugin for OpenReplay."
---
This page describes the `network` namespace of the OpenReplay javascript SDK [options](/sdk/constructor). It relates to capturing network requests such as `fetch` and `XHR`, including payloads if necesssary, and inspect them later on while replaying session recordings. This is very useful for understanding and fixing issues.

## Network Options

```js
network?: {
  failuresOnly: boolean;
  sessionTokenHeader: string | boolean;
  ignoreHeaders: Array<string> | boolean;
  capturePayload: boolean;
  sanitizer: (RequestResponseData) => RequestResponseData | null;
}
```

- `failuresOnly`: Captures requests having 4xx-5xx HTTP status code. Default: `false`.
- `sessionTokenHeader`: In case you have enabled some of our backend [integrations](/integrations) (i.e. Sentry), you can use this option to specify the header name (or activate default one 'X-OpenReplay-SessionToken' by putting option to `true`). This latter gets appended automatically to each fetch/XHR request to contain the OpenReplay sessionToken's value. Default: `false`.
- `ignoreHeaders`: Helps define a list of headers you don't wish to capture. Set its value to `false` to capture all of them (`true` if none). Default: `['Cookie', 'Set-Cookie', 'Authorization']` so sensitive headers won't be captured.
- `capturePayload`: Stores request/response body payloads. This might be quite useful for troubleshooting purposes, but can become heavy on the network usage if your application extensively uses Fetch/XHR requests. Default: `false`.

<Aside type="caution">
	Capturing HTTP payloads may log highly sensitive data (i.e. passwords) or private information that your application may be sending/receiving in Fetch/XHR requests/responses, so make sure you sanitize that data using the **sanitizer** option below.
</Aside>

- `sanitizer`: Sanitize sensitive data from Fetch/XHR request/response or ignore request comletely. You can redact fields on the request object by modifying then returning it from the function (see examples below). Sanitization is applied **after** all the filtering and modifications induced by other options (that is, argument won't contain `body` payload if `capturePayload` was not explicitly set to `true`).

```typescript
interface RequestData {
  body: BodyInit | null | undefined; // whatewer you've put in the init.body in fetch(url, init) or xhr.send(body)
  headers: Record<string, string>;
}

interface ResponseData {
  body: string | Object | null;  // Object if response is of JSON type
  headers: Record<string, string>;
}

interface RequestResponseData {
  readonly status: number;
  readonly method: string;
  url: string;
  request: RequestData;
  response: ResponseData;
}

sanitizer: (data: RequestResponseData) => { // sanitise the body or headers
  if (data.url === "/auth") {
    data.request.body = null
  }

  if (data.request.headers['x-auth-token']) { // can also use ignoreHeaders option instead
    data.request.headers['x-auth-token'] = 'SANITISED';
  }

  // Sanitize response
  if (data.status < 400 && data.response.body.token) {
    data.response.body.token = "<TOKEN>"  
  }

  return data
}

// OR

sanitizer: data => { // ignore requests that start with /secure
  if (data.url.startsWith("/secure")) {
    return null
  }
  return data
}

// OR

sanitizer: data => { // sanitize request url: replace all numbers
  data.url = data.url.replace(/\d/g, "*")
  return data
}
```

## Examples

Below are examples on how to use the `network` option. 

### With NPM

```js
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY,
  network: {
    capturePayload: true // Capture HTTP payload
  }
});
```

### With JavaScript snippet

Note the `initOpts` variable/line to set the `network` option.

```js
<!-- OpenReplay Tracking Code -->
<script>
var initOpts = { 
  projectKey: "GxPpaDARdn2345fgt321", 
  network: { // Enable HTTP payload capture in the network option
    capturePayload: true
  } 
};

(function(A,s,a,y,e,r){
  r=window.OpenReplay=[e,r,y,[s-1, e]];
  s=document.createElement('script');s.src=A;s.async=!a;
  ...
})("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
</script>
```

## Troubleshooting

Having trouble configuring these options? Please connect to our [Slack](https://slack.openreplay.com) and get help from our community.
